<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Doy</string>

    <!-- Intro -->
    <string name="join_community">Join the DOY community</string>
    <string name="create_account">Create account</string>
    <string name="login">Log in</string>
    <string name="google_sign_in">Continue with Google</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="google_auth_failed">Authentication failed</string>

    <!-- Register -->
    <string name="account_created">Account created!</string>
    <string name="welcome">Welcome to the DOY community. From now on, you can start joining the events you are more interested in. It is very easy! When the time of the event comes, you will just have to enter the Chats section to start the video chat.</string>
    <string name="start_enjoying">Start and enjoy being part of the DOY community</string>
    <string name="password_too_short">Password must have at least 6 characters.</string>
    <string name="passwords_dont_match">Passwords don\'t match.</string>
    <string name="invalid_email">Oops! This e-mail isn\'t valid.</string>
    <string name="empty_name">We need your name to sign you up</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="existing_account">Already registered?</string>
    <string name="create">Create</string>

    <!-- Login -->
    <string name="password_forgot">Forgot password?</string>
    <string name="firebase_invalid_user">This user does not exist in our records</string>
    <string name="firebase_invalid_credentials">Looks like credentials were incorrect. Try again.</string>
    <string name="firebase_user_already_exists">This username is not available. Please choose a different one.</string>
    <string name="no_account">Don\'t you have an account?</string>

    <!-- Recover password -->
    <string name="recover_password_title">Have you forgotten your password?</string>
    <string name="recover_password_no_problem">No problem, it happens to all of us!</string>
    <string name="recover_password_message">Please enter the email address you used to register and we will send you a link to reset your password.</string>
    <string name="recover_password_send">Send</string>
    <string name="recover_password_email_sent">Email sent</string>
    <string name="recover_password_email_reminder">Check your email account to recover your password!</string>

    <!-- Category list -->
    <string name="loading_categories">We\'re loading your categories. It\'ll only be a second!</string>
    <string name="no_categories">There are no categories available yet.</string>

    <!-- Service list -->
    <string name="loading_services">Please wait while we load the list of services</string>
    <string name="no_services">It looks like there are no services for this category. Check later!</string>
    <string name="max_spots">Max. %1$d</string>
    <string name="service_duration" translatable="false">%1$d min.</string>

    <!-- Add service -->
    <string name="add_service">Create event</string>
    <string name="upload_image">Upload image</string>
    <string name="select_category">Select category</string>
    <string name="service_title">Event title</string>
    <string name="select_day">Select day</string>
    <string name="select_date">Select start time</string>
    <string name="select_spots">Select available spots</string>
    <string name="select_duration">Select duration</string>
    <string name="description">Description</string>
    <string name="add_service_to_category">What category does your event belong to?</string>
    <string name="how_many_spots">How many people can join your event?</string>
    <string name="save">Save</string>
    <plurals name="people">
        <item quantity="one">%d person</item>
        <item quantity="other">%d people</item>
    </plurals>
    <string name="how_long_duration">How long will it be approximately?</string>
    <string name="minutes">%1$d minutes</string>
    <string name="hours_and_minutes">%1$s and %2$d minutes</string>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="add_service_success">Your event has been created!</string>
    <string name="add_service_success_message">Remember to be punctual and have everything prepared in advance.</string>

    <!-- Service detail -->
    <string name="when">When?</string>
    <string name="duration">Duration:</string>
    <string name="spots">Spots:</string>
    <plurals name="spots_reserved">
        <item quantity="one">%d reserved spot</item>
        <item quantity="other">%d reserved spots</item>
    </plurals>
    <string name="confirm_assistance">Attend</string>
    <string name="add_attendee_success">You have successfully signed up!</string>
    <string name="add_attendee_success_message">The event has just been added to the <b>Chat</b> section so you can answer any questions before the event.\n\nRemember to be punctual, and if you finally will not be able to attend, cancel it in advance.</string>
    <string name="attend_event_yes">You will attend this event!</string>
    <string name="attend_event_cancel">I don\'t want to attend anymore</string>
    <string name="confirm_attend_event_cancel">Are you sure you don\'t want to attend the event?</string>
    <string name="confirm_attend_event_cancel_yes">I am sure, I don\'t want to attend</string>
    <string name="your_service">You are the creator of the event!</string>
    <string name="menu_delete">Delete event</string>
    <string name="menu_edit_event">Edit event</string>
    <string name="confirm_delete_event_title">Are you sure you want to delete the event?</string>
    <string name="delete_event_success">Event successfully deleted</string>

    <!-- Generic Dialog -->
    <string name="wip">Work in progress</string>
    <string name="wip_explanation">We\'re working at full capacity so you can enjoy this feature as soon as possible.</string>

    <!-- Generic Error Dialog -->
    <string name="error_title">Ups! Something went wrong</string>
    <string name="error_message">Try again in a few seconds.</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="bio_default">Do you want to explain something about you?</string>
    <string name="events_by_user">Events created by me</string>
    <string name="logout">Log out</string>
    <string name="update_profile">Update profile</string>
    <string name="menu_edit">Edit</string>

    <!-- My events -->
    <string name="your_events">Your events</string>
    <string name="tab_upcoming">Upcoming</string>
    <string name="tab_active">In progress</string>
    <string name="tab_past">Past</string>
    <string name="loading_events">Loading events…</string>
    <string name="no_events">It looks like you don\'t have any events in this section.</string>

    <!-- Chat -->
    <string name="chat">Chat</string>
    <string name="loading_chats">Loading chats…</string>
    <string name="loading_chat_messages">Loading messages…</string>
    <string name="no_chats">You don\'t have any open chat yet.\n\nJoin or create an event to open a new chat.\n\nWhen the event time comes, you\'ll see a button to join the videochat.</string>
    <string name="chat_in_progress">We are working at full capacity to implement a group chat with video call support, at the moment, try to write a message to the host of the event!</string>
    <string name="send_message_hint">Write a message</string>
    <string name="event_started_title">The event has started!</string>
    <string name="event_started_subtitle">Sign into the videochat</string>
    <string name="chat_button_text">Sign in</string>

    <!-- Notifications -->
    <string name="event_reminder_channel_name">Event reminders</string>
    <string name="event_reminder_channel_description">Notifications related to events</string>
    <string name="event_reminder_subtitle">Your event will start in %1$d minutes. Click here to join and have a good time!</string>

</resources>
