<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_medium"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/your_events"
        android:textColor="@color/grayStrong"
        android:textSize="@dimen/text_size_xl"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/eventsTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/tab_selector">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_upcoming" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_past" />

    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/eventsErrorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/error_title"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/eventsViewPager"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
