<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileNameEditMode"
        style="@style/App.AddService.Input"
        android:hint="@string/name"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileNameEditText"
            style="@style/App.AddService.Input"
            android:clickable="true"
            android:focusable="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileDescriptionEditMode"
        style="@style/App.AddService.Input"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:hint="@string/description"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileNameEditMode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileDescriptionEditText"
            style="@style/App.AddService.Input"
            android:clickable="true"
            android:focusable="true"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileEmailEditMode"
        style="@style/App.AddService.Input"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:hint="@string/email"
        android:textColorHint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileDescriptionEditMode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileEmailEditModeEditText"
            style="@style/App.AddService.Input"
            android:clickable="false"
            android:focusable="false"
            android:inputType="text"
            android:textColor="@color/medium_gray" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>