<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logoGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ProgressBar
        android:id="@+id/registerFragmentProgressView"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_medium"
        android:indeterminate="true"
        android:indeterminateTint="@color/gray"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_logo_colour_green"
        app:layout_constraintBottom_toTopOf="@+id/logoGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.30" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.75">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_large">

            <TextView
                android:id="@+id/registerFragmentTitle"
                style="@style/App.TitleL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerFragmentNameField"
                style="@style/App.Input"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/name"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorTheme"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerFragmentNameEditText"
                    style="@style/App.Input.Edit"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerFragmentEmailField"
                style="@style/App.Input"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerFragmentEmailEditText"
                    style="@style/App.Input.Edit"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerFragmentPasswordField"
                style="@style/App.Input"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:passwordToggleDrawable="@drawable/ic_password_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerFragmentPasswordEditText"
                    style="@style/App.Input.Edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerFragmentRepeatPasswordField"
                style="@style/App.Input"
                android:hint="@string/repeat_password"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:passwordToggleDrawable="@drawable/ic_password_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerFragmentRepeatPasswordEditText"
                    style="@style/App.Input.Edit"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerFragmentCreateButton"
                style="@style/App.Intro.Button"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/bg_filled_button"
                android:text="@string/create_account" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="@dimen/margin_large" />

            <LinearLayout
                android:id="@+id/registerFragmentExistingAccountContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/registerFragmentExistingAccountText"
                    style="@style/App.Intro"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:text="@string/existing_account"
                    android:textColor="@color/grayStrong" />

                <TextView
                    android:id="@+id/registerFragmentSignInText"
                    style="@style/App.Intro"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/raleway_semibold"
                    android:paddingStart="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_medium"
                    android:paddingEnd="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_medium"
                    android:text="@string/login"
                    android:textColor="@color/green" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
